--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jaipur",
+  "name": "doopmarketeer",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,35 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@types/node": "18.14.6",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
+    "ethers": "^6.1.0",
+    "framer-motion": "^10.2.3",
+    "graphql": "^16.6.0",
+    "graphql-request": "^5.2.0",
     "next": "13.2.3",
+    "pre-commit": "^1.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "react-icons": "^4.8.0",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "rimraf": "^4.3.1",
+    "ts-abi-decoder": "^1.0.7",
+    "typescript": "4.9.5",
+    "web3-utils": "^1.8.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.54.1",
+    "@typescript-eslint/parser": "^5.54.1",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.4"
   }
 }
