--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.10.6",
     "@reduxjs/toolkit": "^1.9.3",
     "@types/react-dom": "18.0.11",
+    "@vercel/analytics": "^0.1.11",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.3",
     "ethers": "^6.1.0",
